modified style padding to try and get submit and reset buttons to align correctly in internet explorer. modified class in form to allow for styling and changed error links for criteria to link to first rating

--- a/style.css
+++ b/style.css
@@ -77,15 +77,16 @@ form.feedback label.button
   font-weight: normal;
 }
 
+/* submit and reset buttons */
+form.feedback input.submit_button
+{
+  padding: 1em;
+}
+
 /* ensures a gap between form inputs */
 form.feedback input
 {
   margin-bottom: .5em;
-}
-
-form.feedback input.button
-{
-  float: left;
 }
 
 /* style for main fieldset */
